<resources>
    <string name="app_name">La barbería</string>
    <!-- Strings related to login -->

    /////////////////////////////////////////////// AUTENTICACION
    //Ingreso
    <string name="ingrese_contraseña">Ingrese contraseña</string>
    <string name="ingrese_nombre">Ingrese nombre</string>
    <string name="ingrese_email">Ingrese email</string>
    <string name="ingrese_apellido">Ingrese apellido</string>
    <string name="ingrese_dni">Ingrese DNI</string>
    <string name="ingrese_codigo_confirmacion">Ingrese el codigo</string>
    <string name="ingresa_email">Ingresá tu email</string>
    //Botones
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="action_regiser">Registrarse</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="invalid_username">Email o contraseña incorrectos</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>

    //Textos
    <string name="prompt_email">"Mail"</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="aviso_email">A este mail enviaremos un código de confirmación</string>
    <string name="todavia_no_cuenta">¿Todavía no tenés cuenta?</string>
    <string name="ingresa_datos_registro">Ingresá tus datos\npara registrarte</string>
    <string name="aviso_confirmacion_registro">Al confirmar, le llegará un mail con un código de verificación</string>
    <string name="datos_personales">Datos personales</string>
    <string name="info_envio">Enviamos un código de verificación al correo que ingresaste.</string>
    <string name="ingresa_codigo">Ingresá tu código</string>
    <string name="verifica_spam">No olvides chequear las carpetas "Spam" o "Correo no deseado.".</string>
    <string name="verifica_mail">Si no te llega nada, volvé atrás y verificá que el mail esté correctamente escrito".</string>
    <string name="confirmar2">Confirmar</string>
    <string name="enviar_mail">Enviar Mail</string>
    <string name="ingresa_mail_confirmacion">Ingresá un mail donde llegará un código de confirmación</string>
    <string name="barberia_title">La Barbería</string>
    <string name="espacio" />
    <string name="obj_switch_luz">Brillo automático</string>
    <string name="obj_switch_pantalla">Mensajes a Whatsapp automáticos</string>
    <string name="info">Info</string>
    <string name="quienes_somos">Quiénes somos</string>
    <string name="descripcion_barberia">Somos una barbería ubicada en la Villa de Merlo. Nos encanta esta profesión que comenzamos hace ya varios años y en la que tanto nos perfeccionamos día a día</string>
    <string name="descripcion_barberia2">Contacto: \nWhatsapp: 11 99991111\nMail: barberia@gmail.com</string>
    <string name="precios">Precios</string>
    <string name="barberia_precios">Corte pelo: $500\nCorte barba: $400 \nPelo+barba: $800 \nTeñido: $1.200 \nCerveza: $200</string>
    <string name="barberia_precios2">Corte pelo: $500 \nCorte barba: $400 \nPelo+barba: $800  </string>
    /////////////////////////////////////////////// AUTENTICACION

    /////////////////////////////////////////////// POOL


</resources>